# bond

./: .solitarc.js  Anchor.toml  package.json  tsconfig.json
idl/: ramp.json
programs/ramp/: Cargo.toml
programs/ramp/src/: lib.rs
programs/ramp/src/errors/: errors.rs
programs/ramp/src/instructions/: change_lst_settings.rs  create_account.rs  create_personal_lst.rs  initialize_ramp.rs  initialize_stake_pool.rs  mod.rs  purchase_share.rs
programs/ramp/src/states/: mod.rs  personal_market.rs  ramp_account.rs  ramp_protocol.rs  share.rs  stake_pool.rs
programs_local/: readme.md
sdk/: index.ts
sdk/accounts/: PersonalMarket.ts  RampAccount.ts  RampProtocol.ts  index.ts
sdk/errors/: index.ts
sdk/instructions/: createAccount.ts  createPersonalLst.ts  index.ts  initializeRamp.ts  initializeStakePool.ts  purchaseShare.ts
sdk/types/: BondingCurveMode.ts  Share.ts  index.ts
tests/: ramp.ts
