[package]
name = "ramp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ramp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = [ "stake" ] }
spl-stake-pool = { version = "1.0.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "4.1.2" }
